Correct syntax error in bash script

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ script:
   - cd syn && PATH=$PWD/../altera/14.0/quartus/bin:$PATH make &
   - pid=$!
   - echo $pid
-  - while sleep 1m; echo Waiting on $pid; kill -0 $pid >/dev/null 2>&1; do; done
+  - while kill -0 $pid >/dev/null 2>&1; do sleep 1m; echo Build still running, honest; done
 
