--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 sudo: false
-language: python
-python:
-  - "2.7"
-before_install:
-  - curl checkip.dyndns.org
-  - wget https://www.dropbox.com/s/xvum1md2deppgre/quartus_14.0.tar.gz?dl=0
-  - mv quartus* quartus_14.0.tar.gz
-  - tar -zxf quartus_14.0.tar.gz
+env:
+  matrix:
+    - SYNTHESIS=true
+    - SIMULATION=true
+addons:
+  apt:
+    packages:
+    - python-imaging
+    - iverilog
+install:
+  - pip install coverage
+  - pip install coveralls
 script:
-  - cd syn && PATH=$PWD/../altera/14.0/quartus/bin:$PATH make &
-  - pid=$!
-  - echo $pid
-  - while kill -0 $pid >/dev/null 2>&1; do sleep 1m; echo Build still running, honest; done
-
+  - ./.travis.sh
